# azure-iot-sdk-c

./: .gitlab-ci.yml  README.md  build.sh  setup.sh
config/: toolchain-arm-linux.cmake
rootfs/etc/: ld.so.conf
rootfs/lib/arm-linux-gnueabihf/: libapparmor.so.1  libatasmart.so.4  libblkid.so.1.1.0  libdns-export.so.162.1.3  libfdisk.so.1  libfuse.so.2.9.7  libgcc_s.so.1  libgcrypt.so.20.1.6  libglib-2.0.so.0.5000.3  libjson-c.so.3.0.1  libmount.so.1.1.0  libntfs-3g.so.871.0.0  libparted.so.2  libpci.so.3.5.2  libprocps.so.6.0.0  libsmartcols.so.1  libsystemd.so.0.17.0  libudev.so.1  libulockmgr.so.1.0.1
rootfs/lib/systemd/: systemd  systemd-ac-power  systemd-backlight  systemd-binfmt  systemd-cgroups-agent  systemd-cryptsetup  systemd-fsck  systemd-fsckd  systemd-hibernate-resume  systemd-hostnamed  systemd-initctl  systemd-journald  systemd-localed  systemd-logind  systemd-modules-load  systemd-networkd  systemd-networkd-wait-online  systemd-quotacheck  systemd-random-seed  systemd-remount-fs  systemd-reply-password  systemd-resolved  systemd-rfkill  systemd-shutdown  systemd-sleep  systemd-socket-proxyd  systemd-sysctl  systemd-timedated  systemd-timesyncd  systemd-update-utmp  systemd-user-sessions
rootfs/lib/systemd/system-generators/: systemd-cryptsetup-generator  systemd-debug-generator  systemd-fstab-generator  systemd-getty-generator  systemd-gpt-auto-generator  systemd-hibernate-resume-generator  (+3 more)
rootfs/usr/sbin/: apache2  cron  httxt2dbm  ntp-keygen  ntp-wait  ntpd  ntptime  snmpd  tcpdump  visudo
sample/source/: CMakeLists.txt  moxa_sample_mqtt.c
(+144 files in other folders)
